syntax="proto3";

/**
 * Udp Message Envelope
 */
message HanUdpMessage {
  bytes user_id = 111;
  oneof msg  {
    AudioPacket audio_frame = 100;
    PingPacket ping_packet = 101;
  }
}

/**
 * Keepalive package. Also registeres UDP address of the client to the server
 */
message PingPacket {

}

message AudioPacket {
  bytes channel_id = 110;
  uint64 sequence_id = 112;
  bytes data = 113;
}